# modal-examples

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  code_interpreter.py  cursor_mac_id_modifier.sh  example.py  example_deploy.py  example_mypy.py  example_test.py  example_utils.py  install.sh  lychee.toml  pyproject.toml  simple_torch_cluster.py  simple_torch_cluster_script.py  utils.py
.agents/: environment.yaml
.claude/: CLAUDE.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
01_getting_started/: generators.py  get_started.py  hello_world.py  inference.py  inference_endpoint.py  inference_full.py  inference_map.py  inference_perf.py  sandboxes.py
02_building_containers/: benchmark_nvshmem_p2p.py  debug_nvlink.py  import_sklearn.py  install_cuda.py  install_flash_attn.py  install_nvshmem.py  install_torch.py  nvshmem_reduction.py  nvshmem_reduction_benchmark.py  screenshot.py  urls.txt
03_scaling_out/: basic_grid_search.py  cls_with_options.py  (+5 more)
10_integrations/meltano/meltano_project/utils/: pyproject.toml
10_integrations/meltano/meltano_project/utils/download_sample_data/: main.py
integrations/kedro_modal/: README.md  pyproject.toml
integrations/kedro_modal/kedro_modal/: cli.py  modal_functions.py  runner.py
misc/serverless-ssh-proxy/ssh-proxy/: Cargo.toml  build.rs
misc/serverless-ssh-proxy/ssh-proxy/builder/: 2023.12.312.txt  2023.12.txt  2024.04.txt  2024.10.txt  PREVIEW.txt  README.md  base-images.json
misc/serverless-ssh-proxy/ssh-proxy/proto/: api.proto
misc/serverless-ssh-proxy/ssh-proxy/src/: database_manager.rs  key_handler.rs  lib.rs  main.rs  pty_connection_manager.rs  server_ops.rs
(+1461 files in other folders)
