[tool.poetry]
name = "kedro-modal"
version = "0.1.0"
description = ""
authors = ["Elias Freider <elias@modal.com>"]
readme = "README.md"
packages = [{include = "kedro_modal"}]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
kedro = "^0.18.3"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."kedro.project_commands"]
kedro-modal = "kedro_modal.cli:commands"
